--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Dog Party</title>
-    <link rel="stylesheet" href="./stylesheets/css/master.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/reset.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/css/master.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
-  <body>
 
+  <body>
+    <header>
+      <h1>Dog Party</h1>
+      <nav>
+        <ul>
+          <li>How</li>
+          <li>What</li>
+          <li>Facts</li>
+        </ul>
+      </nav>
+    </header>
+
+    <section id ="main-section">
+      <h2>A Site About Some Dogs</h2>
+      <img src="images/dog1-sq.jpg"/>
+      <a>What are Dogs</a>
+    </section>
+
+    <section>
+      <article class="three-col">
+        <h3>How</h3>
+        <img src="images/dog2-sq.jpg"/>
+        <p>Nap all day Gate keepers of hell yet stares at human while pushing stuff off a table. Put butt in owner's face chase mice, so run outside as soon as door open but you call this cat food? stare at the wall. play with food and get consufes by dust.</p>
+        <a>How to Dog</a>
+      </article>
+
+      <article class="three-col">
+        <h3>What</h3>
+        <img src="images/dog3-sq.jpg"/>
+        <p>Soft kitty warm kitty little ball of furr. Hunt anything that moves nonstop for food stand in front of the computer screen knock dish off tablehead butt cant eeat out of my own dish, then cats take over the world hide when guests come over.</p>
+        <a>What is Dog</a>
+      </article>
+
+      <article class="three-col">
+        <h3>Facts</h3>
+        <img src="images/dog4-sq.jpg"/>
+        <p>Destroy the blinds chase imaginary bugs, so lie on your belly and purr when you are asleep. Fall asleep on the washing machine give attitude hunt anything that moves groom yourself 4 hours - checked, have your beauty sleep for 18 hours - checked, be fabulous for the rest of the day - checked!</p>
+        <a>Dog Facts</a>
+      </article>
+    </section>
+
+    <footer>
+      <h4>Learn About Dogs Online</h4>
+        <ul>
+          <li><img src="images/facebook.svg"/></li>
+          <li><img src="images/twitter.svg"/></li>
+          <li><img src="images/instagram.svg"/></li>
+          <li><img src="images/linkedin.svg"/></li>
+        </ul>
+      <a href="" target="_blank">See This on GitHub</a>
+    </footer>
   </body>
 </html>
