final final commit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <body>
     <header>
-      <h1>Dog Party</h1>
+      <img src="images/dog-icon.svg"/>
+      <h1></h1>
       <nav>
         <ul>
           <li>How</li>
